--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -61,7 +61,8 @@
                             <div style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                         </div>
                     </div>
-
+                    
+					
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
@@ -76,7 +77,7 @@
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
-                            <input type="password" name="confirmarSenha"
+                            <input type="password" name="confirmarSenha" autocomplete="off"
                                    id="confirmarSenha" class="form-control"
                                    th:field="*{confirmarSenha}" autofocus="autofocus" placeholder="Confirmar senha *"
                                    aria-label="Confirmar senha" aria-describedby="basic-addon1">
@@ -90,14 +91,14 @@
 
 
                     <div class="form-check justify-content-center">
-                        <input class="form-check-input" th:field="*{senha}" type="radio" name="tipo" id="aluno" value="true" checked>
+                        <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="aluno" value="1" checked="true">
                         <label class="form-check-label" for="aluno">
                             Aluno
                         </label>
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="tipo" id="professor" value="false">
+                        <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="professor" value="0">
                         <label class="form-check-label" for="professor">
                             Professor
                         </label>
@@ -119,6 +120,17 @@
                         </div>
 
                     </div>
+                    
+                    <div th:if="${param.error}">
+							<script th:inline="javascript">
+								var flag = [[${param.error}]]; 
+							    window.onload = function() {
+							        if(flag){
+							  			alertify.error('Usuário e/ou senha inválidos!!');
+							        }
+								};
+							</script>
+					</div>
 
                     <!--  MODAL -->
                     <div class="modal fade" id="confirmacaoModal" tabindex="-1" role="dialog"
