--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -17,12 +17,12 @@
                 <hr/>
                 <!-- MESSAGES -->
                 <form th:object="${usuario}" th:action="@{/gtcc/usuarios/cadastrar}" method="POST" autocomplete="off"
-                      class="form-default form-horizontal">
+                      class="form-default form-horizontal" name="form">
 
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
-                            <input type="text" name="nome"
+                            <input type="text" name="nome" required
                                    id="nome" class="form-control"
                                    th:field="*{nome}" autofocus="autofocus" placeholder="Usuário *" aria-label="Usuário"
                                    aria-describedby="basic-addon1">
@@ -33,7 +33,7 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="text" name="nomeUsuario" autocomplete="off"
-                                   id="nomeUsuario" class="form-control"
+                                   id="nomeUsuario" class="form-control" required
                                    th:field="*{nomeUsuario}" autofocus="autofocus" placeholder="Nome de Usuário *"
                                    aria-label="Nome de Usuário" aria-describedby="basic-addon1">
                             <div style="color: red;" th:if="${#fields.hasErrors('nomeUsuario')}"
@@ -44,7 +44,7 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="text" name="telefone"
-                                   id="telefone" class="form-control"
+                                   id="telefone" class="form-control" pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}"
                                    th:field="*{telefone}" autofocus="autofocus" placeholder="Telefone"
                                    aria-label="Telefone" aria-describedby="basic-addon1">
                             <div style="color: red;" th:if="${#fields.hasErrors('telefone')}"
@@ -55,9 +55,19 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="email" name="email" pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$"
-                                   id="email" class="form-control"
+                                   id="email" class="form-control" required
                                    th:field="*{email}" autofocus="autofocus" placeholder="E-mail *" aria-label="E-mail"
-                                   aria-describedby="basic-addon1">
+                                   aria-describedby="basic-addon1" onblur="validaEmail()">
+                            <script type="text/javascript">
+                                function validaEmail() {
+                                    var email = document.getElementById('email').value;
+                                    console.log(email);
+                                        $.ajax({
+                                            type: "POST",
+                                            url: "/validaEmail/"+email
+                                        });
+                                    }
+                            </script>
                             <div style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                         </div>
                     </div>
@@ -67,7 +77,7 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="password" name="senha" autocomplete="off"
-                                   id="senha" class="form-control"
+                                   id="senha" class="form-control" required
                                    th:field="*{senha}" autofocus="autofocus" placeholder="Senha *" aria-label="Senha"
                                    aria-describedby="basic-addon1">
                             <div style="color: red;" th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"></div>
@@ -78,7 +88,7 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="password" name="confirmarSenha" autocomplete="off"
-                                   id="confirmarSenha" class="form-control"
+                                   id="confirmarSenha" class="form-control" required
                                    th:field="*{confirmarSenha}" autofocus="autofocus" placeholder="Confirmar senha *"
                                    aria-label="Confirmar senha" aria-describedby="basic-addon1">
                             <div style="color: red;" th:if="${#fields.hasErrors('confirmarSenha')}"
@@ -114,23 +124,12 @@
                         </div>
                         <div class="col-sm-2 text-right">
                             <button id="btn_salvar" type="button" class="btn btn-lg btn-success" data-toggle="modal"
-                                    data-target="#confirmacaoModal">
+                                    data-target="#confirmacaoModal" th:disabled="${#fields.hasAnyErrors()}">
                                 Confirmar
                             </button>
                         </div>
 
                     </div>
-                    
-                    <div th:if="${param.error}">
-							<script th:inline="javascript">
-								var flag = [[${param.error}]]; 
-							    window.onload = function() {
-							        if(flag){
-							  			alertify.error('Usuário e/ou senha inválidos!!');
-							        }
-								};
-							</script>
-					</div>
 
                     <!--  MODAL -->
                     <div class="modal fade" id="confirmacaoModal" tabindex="-1" role="dialog"
