--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -5,6 +5,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 <head>
+    <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
 </head>
 <body>
 <section layout:fragment="content">
@@ -22,20 +23,30 @@
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
-                            <input type="text" name="nome" required
+                            <input type="text" name="nome"
                                    id="nome" class="form-control"
                                    th:field="*{nome}" autofocus="autofocus" placeholder="Usuário *" aria-label="Usuário"
                                    aria-describedby="basic-addon1">
-                            <div style="color: red;" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
+                        <div style="color: red" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></div>
                         </div>
                     </div>
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="text" name="nomeUsuario" autocomplete="off"
-                                   id="nomeUsuario" class="form-control" required
+                                   id="nomeUsuario" class="form-control"
                                    th:field="*{nomeUsuario}" autofocus="autofocus" placeholder="Nome de Usuário *"
                                    aria-label="Nome de Usuário" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
                             <div style="color: red;" th:if="${#fields.hasErrors('nomeUsuario')}"
                                  th:errors="*{nomeUsuario}"></div>
                         </div>
@@ -44,9 +55,14 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="text" name="telefone"
-                                   id="telefone" class="form-control" pattern="\([0-9]{2}\)[\s][0-9]{4}-[0-9]{4,5}"
+                                   id="telefone" class="form-control"
                                    th:field="*{telefone}" autofocus="autofocus" placeholder="Telefone"
                                    aria-label="Telefone" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
                             <div style="color: red;" th:if="${#fields.hasErrors('telefone')}"
                                  th:errors="*{telefone}"></div>
                         </div>
@@ -54,8 +70,8 @@
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
-                            <input type="email" name="email" pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$"
-                                   id="email" class="form-control" required
+                            <input type="text" name="email"
+                                   id="email" class="form-control"
                                    th:field="*{email}" autofocus="autofocus" placeholder="E-mail *" aria-label="E-mail"
                                    aria-describedby="basic-addon1" onblur="validaEmail()">
                             <script type="text/javascript">
@@ -64,22 +80,31 @@
                                     console.log(email);
                                         $.ajax({
                                             type: "POST",
+                                            headers: {"X-CSRF-TOKEN": token},
                                             url: "/validaEmail/"+email
                                         });
                                     }
                             </script>
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
                             <div style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                         </div>
                     </div>
-                    
-					
 
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="password" name="senha" autocomplete="off"
-                                   id="senha" class="form-control" required
+                                   id="senha" class="form-control"
                                    th:field="*{senha}" autofocus="autofocus" placeholder="Senha *" aria-label="Senha"
                                    aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
                             <div style="color: red;" th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"></div>
                         </div>
                     </div>
@@ -88,33 +113,55 @@
                     <div class="form-group row justify-content-center">
                         <div class="input-group col-xl-5">
                             <input type="password" name="confirmarSenha" autocomplete="off"
-                                   id="confirmarSenha" class="form-control" required
+                                   id="confirmarSenha" class="form-control"
                                    th:field="*{confirmarSenha}" autofocus="autofocus" placeholder="Confirmar senha *"
                                    aria-label="Confirmar senha" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
                             <div style="color: red;" th:if="${#fields.hasErrors('confirmarSenha')}"
                                  th:errors="*{confirmarSenha}"></div>
                         </div>
                     </div>
 
 
-                    <label>Tipo de Usuário *</label>
-
-
-                    <div class="form-check justify-content-center">
-                        <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="aluno" value="1" checked="true">
-                        <label class="form-check-label" for="aluno">
-                            Aluno
-                        </label>
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
+                            <label>Tipo de Usuário </label>
+                        </div>
                     </div>
 
-                    <div class="form-check">
-                        <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="professor" value="0">
-                        <label class="form-check-label" for="professor">
-                            Professor
-                        </label>
+
+                    <div class="form-group row justify-content-center col-xl-10">
+                        <div class="form-check form-check-inline ">
+                            <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="aluno" value="1">
+                            <label class="form-check-label" for="aluno">
+                                Aluno
+                            </label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" th:field="*{tipo}" type="radio" name="tipo" id="professor" value="0">
+                            <label class="form-check-label" for="professor">
+                                Professor
+                            </label>
+                        </div>
                     </div>
 
-                    <label>* Esses campos são obrigatórios</label>
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
+                            <div style="color: red;" th:if="${#fields.hasErrors('tipo')}"
+                                 th:errors="*{tipo}"></div>
+                        </div>
+                    </div>
+
+                    <br>
+                    <div class="form-group row justify-content-center">
+                        <div class="input-group col-xl-5">
+                            <label>* Esses campos são obrigatórios</label>
+                        </div>
+                    </div>
 
                     <hr/>
                     <div class="form-group row justify-content-center ">
@@ -124,7 +171,7 @@
                         </div>
                         <div class="col-sm-2 text-right">
                             <button id="btn_salvar" type="button" class="btn btn-lg btn-success" data-toggle="modal"
-                                    data-target="#confirmacaoModal" th:disabled="${#fields.hasAnyErrors()}">
+                                    data-target="#confirmacaoModal">
                                 Confirmar
                             </button>
                         </div>
