--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -25,7 +25,7 @@
                         <div class="input-group col-xl-5">
                             <input type="text" name="nome"
                                    id="nome" class="form-control"
-                                   th:field="*{nome}" autofocus="autofocus" placeholder="Usuário *" aria-label="Usuário"
+                                   th:field="*{nome}" autofocus="autofocus" placeholder="Nome Completo *" aria-label="Usuário"
                                    aria-describedby="basic-addon1">
                         </div>
                     </div>
