--- a/src/main/resources/templates/login/recuperarSenha.html
+++ b/src/main/resources/templates/login/recuperarSenha.html
@@ -13,12 +13,12 @@
 		<div id="wrap" class="container">
 			<div id="main">
 			<div class="jumbotron ">
-			<form th:object="${usuario}" th:action="@{/gtcc/login/recuperarSenha}" method="POST"
+			<form th:object="${usuario}" th:action="@{/gtcc/login/recuperarSenha}" method="GET"
 						class="form-default form-horizontal" >
             <div class="row">
                 <div class=" col-md-3 col-lg-3 col-xl-3"></div>
                 <div class="col-12 col-sm-11 col-md-6 col-lg-6 col-xl-6">
-                    <h1>gtcc</h1>
+                    <h1>Gtcc</h1>
 				<!-- MESSAGES  -->
                     <hr>
                 </div>
@@ -41,7 +41,7 @@
             
             <div class="row justify-content-center" >
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  offset-md-4 offset-lg-4 offset-xl-4">
-                    <button id="btn_recuperar_senha" type="submit"  class="btn btn-success"><i class="fa fa-sign-in"></i>Recuperar Senha</button>
+                    <button id="btn_recuperar_senha" type="submit" th:href="@{/gtcc/login}" class="btn btn-success"><i class="fa fa-sign-in"></i>Recuperar Senha</button>
                 </div>
             </div>
 				</form>
