fix: footer tela login

--- a/src/main/resources/templates/layout/layoutLogin.html
+++ b/src/main/resources/templates/layout/layoutLogin.html
@@ -24,7 +24,7 @@
 			</section>
 			<div class="push"></div>
 			<!-- FOOTER -->
-			<footer class="page-footer font-small" style="background-color:#e9ecef!important;">
+			<footer class="footer page-footer font-small" style="background-color:#e9ecef!important;">
 				<!-- Copyright -->
 				<div class="footer-copyright text-center py-3">© 2018 Copyright:
 					<a href="#"> Sistema de Gerenciamento de Trabalhos de Conclusão de Curso</a>
