fix: layout da tela de login

--- a/src/main/resources/templates/layout/layoutLogin.html
+++ b/src/main/resources/templates/layout/layoutLogin.html
@@ -17,9 +17,8 @@
 	</head>
 
 	<body>
-		<div>
-			<div class="push"></div>
-			<section layout:fragment="content">
+		<div class="login-container">
+			<section class="login" layout:fragment="content">
 				Conteudo!
 			</section>
 			<div class="push"></div>
