--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -1,8 +1,29 @@
-.push { margin:0; padding:0; height:50px; }
+
+html, body{
+	margin: 0;
+	height: 100%;
+	width: 100%;
+}
 
 /* LOGIN */
+.login-container{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+.login{
+	width: 70vw;
+}
+
 .footer {
 	position: absolute;
 	bottom: 0;
 	width: 100vw;
 }
+
+
+.push { margin:0; padding:0; height:50px; }
+
