--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -17,11 +17,26 @@ html, body{
 .login{
 	width: 70vw;
 }
+.header{
+	position: absolute;
+	top:0px;
+	width: 100%;
+}
 
 .footer {
 	position: absolute;
-	bottom: 0;
-	width: 100vw;
+	bottom: 0px;
+	width: 100%;
+}
+
+/* CONTAINER PRINCIPAL */
+.main-container{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
 }
 
 
