--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -22,7 +22,8 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="header">
+        <nav class="header navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <!--   	<img th:src="@{/images/estoque-Verde.png}" -->
                 <!--           class="img-fluid" alt="Responsive image" height="30" width="50"/> -->
@@ -93,13 +94,12 @@
                 </ul>
             </div>
         </nav>
-        <div>
-            <div class="push"></div>
-            <section layout:fragment="content">
+        </div>
+        <div class="main-container">
+            <section  layout:fragment="content">
                 Conteudo!
             </section>
-            <div class="push"></div>
-            <footer class="page-footer font-small" style="background-color:#e9ecef!important;">
+            <footer class="footer page-footer font-small" style="background-color:#e9ecef!important;">
                 <!-- Copyright -->
                 <div class="footer-copyright text-center py-3">© 2018 Copyright:
                     <a href="#"> Sistema de Gerenciamento de Trabalhos de Conclusão de Curso</a>
