--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -23,7 +23,7 @@
 
     <body>
     <div class="header">
-        <nav class="header navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <!--   	<img th:src="@{/images/estoque-Verde.png}" -->
                 <!--           class="img-fluid" alt="Responsive image" height="30" width="50"/> -->
@@ -74,7 +74,7 @@
                     </li>
                     
                     <li 
-                        class="nav-item dropdown">
+                        class="aluno-nav nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Aluno
                         </a>
