feat: navbar mapa de notas

--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -22,8 +22,8 @@ html, body{
 	top:0px;
 	width: 100%;
 }
-.aluno-nav{
-	padding-right: 40px;
+.sair-nav{
+	padding-left: 40px;
 }
 .footer {
 	position: absolute;
