--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -74,7 +74,7 @@
                     </li>
                     
                     <li 
-                        class="aluno-nav nav-item dropdown">
+                        class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Aluno
                         </a>
@@ -82,7 +82,13 @@
                             <a class="dropdown-item" >Consultar</a>
                         </div> 
                     </li>
-                    <li>
+                    <li 
+                        class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Mapa de Notas
+                        </a>
+                    </li>
+                    <li class="sair-nav">
                         <form th:action="@{/gtcc/login/logout}" method="post" class="navbar-form navbar-right">
                             <button type="submit" class="btn btn-default">
                                 <span class="glyphicon glyphicon-log-out"></span>
