feat: WIP mapa de notas

--- a/src/main/resources/templates/mapanotas/index.html
+++ b/src/main/resources/templates/mapanotas/index.html
@@ -15,7 +15,47 @@
                 <div class="row justify-content-center">
                     <h3>Mapa de Notas</h3>
                 </div>
-                <hr/>
+                  <hr/>
+                <div class="table-responsive">
+				  <table class="table table-hover table-bordered">
+				  	<thead>
+					    <tr>
+					      <th scope="col">RA</th>
+					      <th scope="col">Aluno</th>
+					      <th scope="col">Trabalho</th>
+					      <th scope="col">Orientador</th>
+					      <th scope="col">Banca 1</th>
+					      <th scope="col">Banca 2</th>
+					    </tr>
+					  </thead>
+					  <tbody>
+					    <tr>
+					      <th scope="row">1</th>
+					      <td>Mark</td>
+					      <td>Otto</td>
+					      <td>@mdo</td>
+					      <td>Otto</td>
+					      <td>@mdo</td>
+					    </tr>
+					    <tr>
+					      <th scope="row">2</th>
+					      <td>Jacob</td>
+					      <td>Thornton</td>
+					      <td>@fat</td>
+					      <td>Otto</td>
+					      <td>@mdo</td>
+					    </tr>
+					    <tr>
+					      <th scope="row">3</th>
+					      <td>Larry</td>
+					      <td>the Bird</td>
+					      <td>@twitter</td>
+					      <td>Otto</td>
+					      <td>@mdo</td>
+					    </tr>
+					  </tbody>
+				  </table>
+				</div>
                    
             </div>
         </div>
