--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -84,7 +84,7 @@
                     </li>
                     <li 
                         class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="@{/gtcc/mapanotas}" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" th:href="@{/gtcc/mapanotas}" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Mapa de Notas
                         </a>
                     </li>
