fix: navbar mapa de notas

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -83,8 +83,8 @@
                         </div> 
                     </li>
                     <li 
-                        class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" th:href="@{/gtcc/mapanotas}" id="navbarAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        class="nav-item">
+                        <a class="nav-link" th:href="@{/gtcc/mapanotas}"  role="button" >
                             Mapa de Notas
                         </a>
                     </li>
