feat: WIP Ficha de Identificação

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -83,6 +83,15 @@
                         </div> 
                     </li>
                     <li 
+                        class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Ficha de Identificação
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarAdmin">
+                            <a class="dropdown-item" th:href="@{/gtcc/fichaidentificacao/cadastrar}" >Cadastrar</a>
+                        </div> 
+                    </li>
+                    <li 
                         class="nav-item">
                         <a class="nav-link" th:href="@{/gtcc/mapanotas}"  role="button" >
                             Mapa de Notas
