--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -22,6 +22,7 @@
     </head>
 
     <body>
+    <div class="main-container">
     <div class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
@@ -110,16 +111,17 @@
             </div>
         </nav>
         </div>
-        <div class="main-container">
-            <section  layout:fragment="content">
-                Conteudo!
-            </section>
-            <footer class="footer page-footer font-small" style="background-color:#e9ecef!important;">
-                <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2018 Copyright:
-                    <a href="#"> Sistema de Gerenciamento de Trabalhos de Conclusão de Curso</a>
-                </div>
-            </footer>
+        <div class="push"></div>
+         <section  layout:fragment="content">
+             Conteudo!
+         </section>
+         <div class="push"></div>
+         <footer class="footer page-footer font-small" style="background-color:#e9ecef!important;">
+             <!-- Copyright -->
+             <div class="footer-copyright text-center py-3">© 2018 Copyright:
+                 <a href="#"> Sistema de Gerenciamento de Trabalhos de Conclusão de Curso</a>
+             </div>
+         </footer>
         </div>
 
 
