--- a/src/main/resources/templates/layout/layoutLogin.html
+++ b/src/main/resources/templates/layout/layoutLogin.html
@@ -22,7 +22,7 @@
 				Conteudo!
 			</section>
 			<!-- FOOTER -->
-			<footer class="footer page-footer font-small" style="background-color:#e9ecef!important;">
+			<footer class="footer-login page-footer font-small" style="background-color:#e9ecef!important;">
 				<!-- Copyright -->
 				<div class="footer-copyright text-center py-3">© 2019 Copyright:
 					<a href="#"> Sistema de Gerenciamento de Trabalhos de Conclusão de Curso</a>
