--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -18,16 +18,23 @@ html, body{
 	width: 70vw;
 }
 .header{
-	position: absolute;
-	top:0px;
+	display: flex;
+	width: 100%;
+}
+.navbar{
 	width: 100%;
 }
 .sair-nav{
 	padding-left: 40px;
 }
-.footer {
+.footer-login {
 	position: absolute;
 	bottom: 0px;
+	width: 100%;
+}
+.footer {
+	display:flex;
+	justify-content: center;
 	width: 100%;
 }
 
@@ -35,10 +42,17 @@ html, body{
 .main-container{
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	min-height: 100%;
+}
+
+.main-content{
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100%;
 }
 
 
