--- a/src/main/resources/templates/professor/professorCreate.html
+++ b/src/main/resources/templates/professor/professorCreate.html
@@ -8,7 +8,7 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
 </head>
 <body>
-<section class="main-container" layout:fragment="content">
+<section class="main-content" layout:fragment="content">
     <div id="wrap" class="container">
         <div id="main">
             <div class="jumbotron">
