--- a/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
@@ -7,7 +7,7 @@
 <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
 </head>
 <body>
-	<section layout:fragment="content" class="main-container">
+	<section layout:fragment="content" class="main-content">
 		<div id="wrap" class="container">
 			<div id="main">
 				<div class="jumbotron">
