--- a/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaCreate.html
@@ -17,8 +17,7 @@
 					<hr />
 					<form th:object="${ficha}"
 						th:action="@{/gtcc/fichaidentificacao/cadastrar}" method="POST"
-						class="form-default form-horizontal"
-						name="form">
+						class="form-default form-horizontal" name="form">
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
@@ -26,18 +25,22 @@
 							</div>
 						</div>
 
-						<div class="alert  alert-danger  alert-dismissible" role="alert"
-							th:if="${#fields.hasAnyErrors()}">
-							<button type="button" class="close" data-dismiss="alert"
-								aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
+<!-- 						<div class="form-group row justify-content-center"> -->
+<!-- 							<div class="input-group col-xl-10"> -->
+<!-- 								<div class="alert  alert-danger  alert-dismissible form-control" -->
+<!-- 									role="alert" th:if="${#fields.hasAnyErrors()}"> -->
+<!-- 									<button type="button" class="close" data-dismiss="alert" -->
+<!-- 										aria-label="Close"> -->
+<!-- 										<span aria-hidden="true">&times;</span> -->
+<!-- 									</button> -->
 
-							<div th:each="erro: ${#fields.detailedErrors()}">
-								<i class="fa fa-exclamation-circle"></i> <span
-									th:text="${erro.message}">Mensagem erro.</span>
-							</div>
-						</div>
+<!-- 									<div th:each="erro: ${#fields.detailedErrors()}"> -->
+<!-- 										<i class="fa fa-exclamation-circle"></i> <span -->
+<!-- 											th:text="${erro.message}">Mensagem erro.</span> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
@@ -57,27 +60,41 @@
 						</div>
 
 						<div class="form-group row justify-content-center">
-							<div class="input-group col-xl-8">
+							<div class="input-group col-xl-10">
 								<input type="text" name="areaConcentracao" id="areaConcentracao"
 									class="form-control" th:field="*{areaConcentracao}"
 									placeholder="Area de concentração *"
 									aria-label="Area de concentração"
 									aria-describedby="basic-addon1">
 							</div>
-
-							<div class="input-group col-xl-2">
-								<input type="number" name="ano" id="ano" class="form-control"
-									th:field="*{ano}" placeholder="Ano *" aria-label="Ano"
-									aria-describedby="basic-addon1">
-							</div>
-
 						</div>
 
 						<div class="form-group row justify-content-center">
 							<div class="input-group col-xl-10">
 								<div style="color: red"
 									th:if="${#fields.hasErrors('areaConcentracao')}"
-									th:errors="*{areaConcentracao}"></div>
+									th:errors="*{areaConcentracao}">Deu erro aqui</div>
+							</div>
+						</div>
+						
+						<div class="form-group row justify-content-center">
+
+							<div class="input-group col-xl-2">
+								<input type="number" name="ano" id="ano" class="form-control"
+									th:field="*{ano}" placeholder="Ano *" aria-label="Ano"
+									aria-describedby="basic-addon1">
+							</div>
+							
+							<div class="input-group col-xl-8">
+							</div>
+
+						</div>
+						
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<div style="color: red"
+									th:if="${#fields.hasErrors('ano')}"
+									th:errors="*{ano}">Deu erro aqui</div>
 							</div>
 						</div>
 
