--- a/src/main/resources/templates/mapanotas/index.html
+++ b/src/main/resources/templates/mapanotas/index.html
@@ -18,7 +18,7 @@
                   <hr/>
                 <div class="table-responsive">
 				  <table class="table table-hover table-bordered">
-				  	<thead>
+				  	<thead class="thead-dark">
 					    <tr>
 					      <th scope="col">RA</th>
 					      <th scope="col">Aluno</th>
