fix: troca de gtcc para GTCC

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 			<div class="jumbotron text-center h-100 w-100">
 <!-- 			 -->
 				<div class="row justify-content-center" style="padding-top: 5px;">
-					<h3>Gtcc. Seja Bem-vindo, <label th:text="${nomeUsuario}"></label>.</h3>
+					<h3>GTCC. Seja Bem-vindo, <label th:text="${nomeUsuario}"></label>.</h3>
 				</div>
 
 				
