--- a/src/main/resources/templates/layout/layoutLogin.html
+++ b/src/main/resources/templates/layout/layoutLogin.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" th:href="@{/css/estilo.css}" />
 		<link rel="stylesheet" type="text/css" th:href="@{/js/alertifyjs/css/alertify.min.css}" />
 
-		<title>gtcc</title>
+		<title>GTCC</title>
 
 	</head>
 
