--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -80,7 +80,7 @@
                             Aluno
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
-                            <a class="dropdown-item" >Consultar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/alunos/cadastrar}">Cadastrar</a>
                         </div> 
                     </li>
                     <li 
@@ -132,6 +132,7 @@
         <script type="text/javascript" th:src="@{/js/alertifyjs/alertify.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/datejs/date.js}"></script>
         <script type="text/javascript" th:src="@{/js/password_checker/passwordscheck.js}"></script>
+        <script type="text/javascript" th:src="@{/js/custom.js}"></script>
         <script type="text/javascript" src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
         <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
