--- a/src/main/resources/templates/aluno/alunoCreate.html
+++ b/src/main/resources/templates/aluno/alunoCreate.html
@@ -93,6 +93,11 @@
 						  <div class="field-placeholder"><span>Telefone</span></div>
 						</div>
 					</div>
+					<div class="form-group row justify-content-center">
+							<div class="input-group col-8">
+								
+							</div>
+				     </div>
 					<div class="row justify-content-center">
 		                 <div class="field-wrapper col-8">
 						  <input type="password" name="senha"
