fix: cadastro professor

--- a/src/main/resources/templates/professor/professorCreate.html
+++ b/src/main/resources/templates/professor/professorCreate.html
@@ -60,25 +60,25 @@
 
                     <div class="form-group offset-md-4 offset-sm-1">
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{coordenador}" type="radio" name="coordenador" id="coordenador" value="1">
+                            <input class="form-check-input" th:field="*{coordenador}" type="checkbox" name="coordenador" id="coordenador" value="1">
                             <label class="form-check-label" for="coordenador">
                                 Coordenador
                             </label>
                         </div>
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{orientador}" type="radio" name="orientador" id="orientador" value="1">
+                            <input class="form-check-input" th:field="*{orientador}" type="checkbox" name="orientador" id="orientador" value="1">
                             <label class="form-check-label" for="orientador">
                                 Orientador
                             </label>
                         </div>
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{avaliador}" type="radio" name="avaliador" id="avaliador" value="1">
+                            <input class="form-check-input" th:field="*{avaliador}" type="checkbox" name="avaliador" id="avaliador" value="1">
                             <label class="form-check-label" for="avaliador">
                                 Avaliador
                             </label>
                         </div>
                         <div class="form-check row">
-                            <input class="form-check-input" th:field="*{coordenador_do_curso}" type="radio" name="coordenador_do_curso" id="coordenador_do_curso" value="1">
+                            <input class="form-check-input" th:field="*{coordenador_do_curso}" type="checkbox" name="coordenador_do_curso" id="coordenador_do_curso" value="1">
                             <label class="form-check-label" for="coordenador_do_curso">
                                 Coordenador do Curso
                             </label>
