--- a/src/main/resources/templates/usuario/usuarioCreate.html
+++ b/src/main/resources/templates/usuario/usuarioCreate.html
@@ -8,7 +8,7 @@
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
 </head>
 <body>
-<section layout:fragment="content">
+<section layout:fragment="content"  class="main-content">
     <div id="wrap" class="container">
         <div id="main">
             <div class="jumbotron">
