feat: WIP criterio de avaliação

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -135,7 +135,8 @@
         <script type="text/javascript" th:src="@{/js/custom.js}"></script>
         <script type="text/javascript" src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
         <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
+		<script type="text/javascript" th:src="@{/js/criterioAvaliacao.js}"></script>
+		
         <script type="text/javascript">
             <!-- BLOCO DE CÒDIGO USADO PARA AS MÁSCARAS  -->
             $(document).ready(function(){
