Fix: Rota e tela proposta

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -70,7 +70,7 @@
                             Proposta de TCC
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarAdmin">
-                            <a class="dropdown-item" th:href="@{/gtcc/proposta/1}">Gerar</a>
+                            <a class="dropdown-item" th:href="@{/gtcc/proposta}">Gerar</a>
                         </div>
                     </li>
                     
